--- a/beda-bahan-tumbler-stainless.html
+++ b/beda-bahan-tumbler-stainless.html
@@ -10,7 +10,7 @@
     <meta name="description"
         content="Pahami perbedaan stainless steel grade 304 dan 316 untuk souvenir tumbler. Ketahui mana yang food grade, anti-karat, dan aman untuk kesehatan.">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Beda Bahan Tumbler Stainless SUS 304 vs 316">
