--- a/blog-6.html
+++ b/blog-6.html
@@ -9,6 +9,9 @@
     <link rel="icon" type="image/png" href="assets/logo.png">
     <meta name="description"
         content="Halaman 6 - Pusat wawasan (Knowledge Hub) seputar vendor souvenir kantor, tips branding, rekomendasi corporate gifts, dan strategi promosi perusahaan.">
+    <meta name="author" content="Maroon Souvenir">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+
     <!-- Fonts & Icons -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
