--- a/buku-agenda-notebook.html
+++ b/buku-agenda-notebook.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="cetak buku agenda, notebook custom, buku agenda kulit, souvenir kantor, blocknote seminar, percetakan agenda surabaya, corporate notebook 2026">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Cetak Buku Agenda Custom: Pilihan Notebook Kulit & Hardcover 2026">
