--- a/category-drinkware.html
+++ b/category-drinkware.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir tumbler surabaya, botol minum custom, cetak mug promosi, vacuum flask stainless, tumbler corkcicle custom, merchandise kantor">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Souvenir Tumbler & Drinkware Custom - Best Seller Corporate Gift">
