--- a/category-eco.html
+++ b/category-eco.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir eco green, bamboo tumbler custom, recycled notebook, tas goni promosi, souvenir ramah lingkungan surabaya, corporate gift esg">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Souvenir Eco-Green & Sustainable - The Pioneer Move">
