--- a/cetak-logo-custom-satuan-grosir.html
+++ b/cetak-logo-custom-satuan-grosir.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="jasa cetak logo custom, sablon merchandise satuan, laser grafir metal, uv printing tumbler, sablon kaos grosir, cetak souvenir murah surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Cetak Logo Custom: Teknologi Terbaik untuk Branding Anda">
