--- a/etika-memberi-cinderamata-sidang-disertasi.html
+++ b/etika-memberi-cinderamata-sidang-disertasi.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="etika souvenir sidang disertasi, cinderamata ujian terbuka doktor, hadiah untuk dewan penguji, aturan suap gratifikasi akademik, gift set sidang tertutup, packaging souvenir sopan">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Etika Memberi Cinderamata pada Sidang Disertasi: Jangan Salah Langkah">
