--- a/flashdisk-kartu-promosi.html
+++ b/flashdisk-kartu-promosi.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="flashdisk kartu custom, usb card souvenir, souvenir flashdisk kartu nama, vendor flashdisk surabaya, flashdisk promosi perusahaan, cetak usb kartu full color, merchandise kantor unik">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Flashdisk Kartu: Kartu Nama Digital yang Multifungsi">
