--- a/hampers-lebaran-perusahaan.html
+++ b/hampers-lebaran-perusahaan.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="hampers lebaran perusahaan, paket lebaran kantor, parcel idul fitri perusahaan, souvenir lebaran 2026, bingkisan hari raya korporat">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Hampers Lebaran Perusahaan: Simbol Apresiasi di Hari Kemenangan">
