--- a/id-card-lanyard.html
+++ b/id-card-lanyard.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="cetak lanyard custom, tali id card sablon, id card holder kulit, cetak kartu pvc, tali lanyard tissue, lanyard printing surabaya, seminar kit lanyard, name tag panitia">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Cetak ID Card & Tali Lanyard Custom: Identitas Event Profesional">
