--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="vendor hampers malang, jual parcel malang, hampers lebaran malang, gift set premium malang, parcel perusahaan malang, hampers custom malang, parcel natal malang">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Vendor Hampers Malang - Parcel & Gift Set Premium">
@@ -516,7 +516,7 @@
             </div>
 
             <div class="grid md-grid-cols-3 gap-8">
-                <a href="blog/rekomendasi-souvenir-kantor-2026.html" class="card"
+                <a href="rekomendasi-souvenir-kantor-2026.html" class="card"
                     style="border: none; box-shadow: none; padding: 0; overflow: hidden;">
                     <div
                         style="height: 200px; overflow: hidden; border-radius: var(--radius-md); border: 2px solid #1E293B; margin-bottom: 1rem;">
@@ -530,7 +530,7 @@
                     <span class="text-accent" style="font-weight: 700;">Baca Selengkapnya <i
                             class="fa-solid fa-arrow-right"></i></span>
                 </a>
-                <a href="blog/beda-bahan-tumbler-stainless.html" class="card"
+                <a href="beda-bahan-tumbler-stainless.html" class="card"
                     style="border: none; box-shadow: none; padding: 0; overflow: hidden;">
                     <div
                         style="height: 200px; overflow: hidden; border-radius: var(--radius-md); border: 2px solid #1E293B; margin-bottom: 1rem;">
@@ -544,7 +544,7 @@
                     <span class="text-accent" style="font-weight: 700;">Baca Selengkapnya <i
                             class="fa-solid fa-arrow-right"></i></span>
                 </a>
-                <a href="blog/tips-memilih-paket-seminar.html" class="card"
+                <a href="tips-memilih-paket-seminar.html" class="card"
                     style="border: none; box-shadow: none; padding: 0; overflow: hidden;">
                     <div
                         style="height: 200px; overflow: hidden; border-radius: var(--radius-md); border: 2px solid #1E293B; margin-bottom: 1rem;">
