--- a/jaket-hoodie-kantor.html
+++ b/jaket-hoodie-kantor.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="jaket bomber custom, hoodie kantor, jaket angkatan, konveksi jaket surabaya, vendor hoodie perusahaan, seragam startup, jaket waterproof custom">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Jaket Bomber & Hoodie Kantor: Seragam Modern Tim Profesional">
