--- a/kelebihan-mug-keramik.html
+++ b/kelebihan-mug-keramik.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="mug keramik custom, souvenir mug kantor, cetak mug surabaya, mug bunglon custom, sablon mug decal, mug stoneware premium, souvenir gelas keramik, harga mug promosi">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Mug Keramik Custom: Raja Souvenir yang Tak Pernah Salah">
