--- a/konveksi-seragam-kaos.html
+++ b/konveksi-seragam-kaos.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="konveksi seragam kantor, vendor kaos promosi surabaya, polo shirt bordir logo, bikin kaos event, seragam kerja lapangan, jaket hoodie kantor, topi promosi custom">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Konveksi Seragam Kantor & Kaos Promosi: Kualitasjahitan Butik">
