--- a/merchandise-kantor-eksklusif.html
+++ b/merchandise-kantor-eksklusif.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="merchandise kantor eksklusif, souvenir perusahaan premium, corporate gift set, onboarding kit karyawan, souvenir kantor mewah, hadiah vip perusahaan">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Merchandise Kantor Eksklusif: Simbol Prestise Bisnis Anda">
