--- a/merchandise-mahasiswa-baru.html
+++ b/merchandise-mahasiswa-baru.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir ospek, paket maba, merchandise pkkmb, atribut mahasiswa baru, topi ospek custom, lanyard universitas, kaos angkatan kuliah, tumbler plastik custom">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Paket Merchandise Mahasiswa Baru: Solusi Pengadaan Massal Ospek/PKKMB">
