--- a/merchandise-promosi-branding.html
+++ b/merchandise-promosi-branding.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="barang promosi murah, giveaway merchandise, souvenir pameran, souvenir expo gratis, merchandise branding murah, kipas tangan custom, pulpen promosi, gantungan kunci logo">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Merchandise Promosi & Branding: Strategi Giveaway Murah Meriah">
