--- a/package-conference-pro.html
+++ b/package-conference-pro.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="paket seminar kit murah, souvenir seminar kampus, conference kit surabaya, paket pelatihan massal, tote bag seminar">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="The Conference Pro - Paket Seminar Kit Hemat">
