--- a/package-deal-closer.html
+++ b/package-deal-closer.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir vip surabaya, executive gift set, corporate gift mewah, powerbank custom, hamper lebaran kantor premium">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="The Deal Closer - Souvenir Klien VIP & Eksekutif">
