--- a/package-earth-saver.html
+++ b/package-earth-saver.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir ramah lingkungan, eco friendly gift set, souvenir bambu surabaya, paket csr kantor, tote bag belacu, tumbler bambu custom">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="The Earth Saver - Souvenir Eco-Friendly & Sustainable">
