--- a/package-employee-kit.html
+++ b/package-employee-kit.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="new employee kit, onboarding kit, welcome pack karyawan, souvenir kantor surabaya, paket souvenir karyawan baru">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="The New Employee Kit - Solusi Onboarding Karyawan">
