--- a/package-merchandise-exclusive.html
+++ b/package-merchandise-exclusive.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="merchandise kantor eksklusif, paket souvenir kantor, tumbler corkcicle custom, tote bag canvas tebal, payung golf promosi, kaos sablon custom">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Paket Merchandise Eksklusif - Corporate Swag Kualitas Distro">
