--- a/paket-seminar-eksklusif.html
+++ b/paket-seminar-eksklusif.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="paket seminar eksklusif, seminar kit hardbox, souvenir seminar vip, corporate gift premium, paket seminar surabaya jakarta, seminar kit powerbank, agenda kulit custom">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Paket Seminar Kit Eksklusif Hardbox & Souvenir VIP">
