--- a/paket-seminar-kit-basic.html
+++ b/paket-seminar-kit-basic.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="paket seminar kit murah, seminar kit dibawah 50 ribu, souvenir seminar hemat, tas spunbond custom, pulpen promosi murah, paket seminar mahasiswa, vendor seminar kit surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Ide Paket Seminar Kit Basic di Bawah 50 Ribu">
