--- a/paket-seminar-nasional-internasional.html
+++ b/paket-seminar-nasional-internasional.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="paket seminar kit kampus, tas seminar nasional, blocknote seminar murah, souvenir seminar internasional, totebag kanvas custom, pulpen seminar logo">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Paket Seminar Kit Kampus: Solusi Cepat & Hemat untuk Panitia Acara">
