--- a/panduan-lengkap-seminar-kit.html
+++ b/panduan-lengkap-seminar-kit.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="panduan seminar kit, tips memilih souvenir seminar, ide seminar kit unik, budget seminar kit, vendor seminar kit terpercaya, tren souvenir 2026, paket seminar kit mahasiswa vs eksekutif">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Panduan Lengkap Memilih Seminar Kit: Strategi, Budgeting & Tren 2026">
