--- a/powerbank-custom-souvenir.html
+++ b/powerbank-custom-souvenir.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="powerbank custom aman, souvenir powerbank promosi, powerbank real capacity, bahaya powerbank palsu, vendor powerbank surabaya, souvenir elektronik premium, powerbank 10000mah custom">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Tips Memilih Powerbank Custom yang Aman untuk Souvenir">
