--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="katalog hampers malang, daftar harga parcel malang, grosir gift set malang, vendor hampers malang, hampers premium catalog">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Katalog Hampers & Gift Set Premium Malang">
