--- a/silo_structure_update.html
+++ b/silo_structure_update.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strategi Souvenir & Branding Perusahaan | Blog Maroon Souvenir</title>
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <!-- Add other meta tags and links here -->
 </head>
 
