--- a/souvenir-gadget-elektronik.html
+++ b/souvenir-gadget-elektronik.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir gadget kantor, souvenir elektronik premium, powerbank custom, flashdisk kartu, speaker bluetooth logo, corporate gifts technology, souvenir kantor modern">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Pusat Souvenir Gadget Kantor & Elektronik Premium (Garansi Resmi)">
