--- a/souvenir-kampus-universitas.html
+++ b/souvenir-kampus-universitas.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir kampus, merchandise universitas, souvenir wisuda custom, paket seminar kampus, souvenir promosi doktor, merchandise mahasiswa baru, vendor souvenir perguruan tinggi">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Pusat Souvenir Kampus: Solusi Merchandise Akademik dari Maba hingga Profesor">
