--- a/souvenir-perusahaan-eksklusif.html
+++ b/souvenir-perusahaan-eksklusif.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir perusahaan eksklusif, corporate gift set, souvenir kantor premium, merchandise vvip, paket souvenir mewah, executive gift indonesia, vendor souvenir jakarta surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Souvenir Perusahaan Eksklusif & Premium Gift Set (Katalog 2026)">
