--- a/souvenir-tumbler-botol.html
+++ b/souvenir-tumbler-botol.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir tumbler custom, botol minum promosi, tumbler stainless surabaya, mug keramik custom, vendor tumbler kantor, tumbler insert paper murah, botol aluminium sport, thermos custom logo">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Pusat Souvenir Tumbler & Botol Minum Custom Logo (Terlengkap)">
