--- a/tas-belacu-goni.html
+++ b/tas-belacu-goni.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="tas belacu custom, tote bag blacu, tas karung goni, jute bag souvenir, tas seminar etnik, packaging ramah lingkungan, goodie bag rustic">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Tas Belacu & Goni: Sentuhan Vintage untuk Brand Modern">
