--- a/tas-goodie-bag.html
+++ b/tas-goodie-bag.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="tas goodie bag surabaya, tas spunbond custom, tote bag blacu sablon, goodie bag seminar kit, tas belanja lipat custom, packaging ramah lingkungan, konveksi tas promosi">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Katalog Goodie Bag: Solusi Packaging Ramah Lingkungan">
