--- a/tas-seminar-laptop-vs-ransel.html
+++ b/tas-seminar-laptop-vs-ransel.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="tas seminar laptop, ransel seminar custom, tas laptop jinjing, backpack seminar kit, souvenir tas pelatihan, tas diklat dinas, vendor tas seminar surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Tas Seminar Laptop vs Ransel: Mana yang Lebih Efektif?">
