--- a/topi-promosi-custom.html
+++ b/topi-promosi-custom.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="topi promosi custom, topi trucker jaring, topi baseball bordir, konveksi topi surabaya, vendor topi event, topi custom logo, pabrik topi murah">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Topi Promosi Custom: Iklan Berjalan di Kepala Klien Anda">
