--- a/tumbler-insert-paper.html
+++ b/tumbler-insert-paper.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="tumbler insert paper, souvenir tumbler murah, cetak tumbler 1 hari jadi, tumbler promosi surabaya, souvenir event dadakan, tumbler plastik custom, botol minum insert paper">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Tumbler Insert Paper: Solusi Souvenir Murah & Ekspres">
