--- a/tumbler-stainless-vacuum.html
+++ b/tumbler-stainless-vacuum.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="tumbler stainless custom, souvenir thermos kantor, botol minum tahan panas, tumbler niagara custom, tumbler sakura promosi, vacuum flask logo, vendor tumbler premium">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Tumbler Stainless Vacuum Custom - Souvenir Premium Tahan Panas">
