--- a/vendor-souvenir-kantor-jakarta.html
+++ b/vendor-souvenir-kantor-jakarta.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="vendor souvenir jakarta, souvenir kantor jakarta selatan, seminar kit jakarta pusat, corporate gift set jakarta, merchandise promosi scbd, vendor souvenir kuningan">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Vendor Souvenir Kantor Jakarta: Solusi Cepat Kebutuhan Korporat">
