--- a/vendor-souvenir-kantor-jogja.html
+++ b/vendor-souvenir-kantor-jogja.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="vendor souvenir jogja, souvenir kantor yogyakarta, seminar kit ugm uny, merchandise etnik jogja, souvenir wisuda jogja, vendor souvenir bantul sleman">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Vendor Souvenir Kantor Jogja: Merchandise Unik & Berbudaya">
