--- a/vendor-souvenir-kantor-profesional.html
+++ b/vendor-souvenir-kantor-profesional.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="vendor souvenir kantor profesional, supplier corporate gift, souvenir kantor jakarta, souvenir kantor surabaya, pengadaan barang promosi, merchandise bumn, vendor seminar kit amanah">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Vendor Souvenir Kantor Profesional: Kunci Sukses Branding Anda">
