--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="tentang maroon souvenir, profil vendor hampers malang, perusahaan parcel terpercaya, supplier gift set malang raya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Tentang Maroon Souvenir - Partner Branding Terpercaya">
