--- a/alat-makan-kayu.html
+++ b/alat-makan-kayu.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="alat makan kayu, cutlery set bamboo, sedotan stainless custom, souvenir zero waste, souvenir pernikahan unik, sendok garpu kayu travel, wooden cutlery set">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Cutlery Set Kayu & Sedotan Stainless: Gaya Hidup Zero Waste">
