--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="blog souvenir kantor, tips memilih souvenir, strategi branding perusahaan, corporate gift ideas, vendor souvenir surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Blog Maroon Souvenir - Insight Corporate Gifting">
