--- a/botol-minum-aluminium.html
+++ b/botol-minum-aluminium.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="botol minum aluminium custom, souvenir botol sport, botol sepeda custom, tumbler aluminium murah, grosir botol minum surabaya, cetak botol aluminium, souvenir event lari">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Botol Minum Aluminium Custom: Souvenir Sporty & Awet (Grosir)">
