--- a/botol-sport-aluminium.html
+++ b/botol-sport-aluminium.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="botol aluminium custom, souvenir fun run, botol minum olahraga, tumbler aluminium promosi, souvenir outbound kantor, botol karabiner custom, vendor botol sport surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Botol Aluminium Sport: Pilihan Tepat untuk Event Outdoor">
