--- a/buku-agenda-kerja.html
+++ b/buku-agenda-kerja.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="buku agenda custom, souvenir buku catatan, agenda kerja karyawan, buku notes perusahaan, agenda kulit sintetis, souvenir kantor eksklusif, cetak agenda surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Pentingnya Buku Agenda Custom untuk Produktivitas Karyawan">
