--- a/buku-daur-ulang.html
+++ b/buku-daur-ulang.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="buku daur ulang, recycled notebook custom, pulpen kertas eco, souvenir ramah lingkungan, seminar kit go green, agenda kertas coklat, souvenir unik surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Buku Daur Ulang & Eco Pen: Tulis Cerita Hijau Perusahaan Anda">
