--- a/category-executive.html
+++ b/category-executive.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="executive souvenir surabaya, vip gift set, souvenir direksi, leather gift set custom, premium hardbox packaging, signature pen custom, hadiah untuk bos">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Executive & VIP Gift Set - Hadiah Berkelas untuk Klien Prioritas">
