--- a/category-express.html
+++ b/category-express.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir express surabaya, cetak mug kilat, flashdisk ready stock, souvenir kantor 24 jam, vendor souvenir cepat, rush order souvenir surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Souvenir Express & Ready Stock - Solusi Deadline Mepet">
