--- a/category-gadget.html
+++ b/category-gadget.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir powerbank custom, flashdisk kartu promosi, bluetooth speaker logo perusahaan, souvenir gadget surabaya, tech merchandise corporate">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Souvenir Gadget & Tech Custom - Pilihan Gen-Z & Startup">
