--- a/category-lifestyle.html
+++ b/category-lifestyle.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir tas custom surabaya, vendor payung promosi, konveksi kaos polo bordir, souvenir pouch kulit, merchandise daily use corporate">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Souvenir Lifestyle & Apparel Custom - Iklan Berjalan Efektif">
