--- a/category-seminar.html
+++ b/category-seminar.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="seminar kit surabaya, paket training kantor, onboarding kit karyawan, souvenir seminar murah, paket welcome kit new joiner, tas spunbond custom">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Paket Seminar Kit & Training - The Cash Cow Solution">
