--- a/desk-accessories-custom.html
+++ b/desk-accessories-custom.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="desk accessories custom, mousepad custom, deskmat full print, phone holder souvenir, humidifier custom logo, souvenir kantor estetik, merchandise meja kerja">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Desk Accessories Custom: Bikin Meja Kerja Klien Lebih Estetik">
