--- a/kaos-polo-bordir.html
+++ b/kaos-polo-bordir.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="polo shirt custom, kaos kerah bordir, seragam gathering kantor, konveksi polo shirt surabaya, bahan lacoste cvc vs pique, vendor kaos polo premium, kaos promosi eksklusif">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Polo Shirt Custom Bordir: Solusi Seragam Kantor Semi-Formal">
