--- a/katalog-souvenir-event-perusahaan.html
+++ b/katalog-souvenir-event-perusahaan.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir event perusahaan, onboarding kit karyawan, hampers lebaran kantor, souvenir akhir tahun kalender, souvenir rups saham, souvenir promosi doktor">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Solusi Souvenir untuk Setiap Momen Perusahaan Anda">
