--- a/merchandise-perusahaan-bisnis.html
+++ b/merchandise-perusahaan-bisnis.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="merchandise perusahaan, merchandise bisnis, barang promosi kantor, branding kit perusahaan, souvenir kantor custom, gift set perusahaan, vendor merchandise jakarta surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Jasa Merchandise Perusahaan: Tingkatkan Brand Awareness Bisnis Anda">
