--- a/onboarding-kit-karyawan.html
+++ b/onboarding-kit-karyawan.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="onboarding kit karyawan, welcome kit perusahaan, souvenir karyawan baru, paket seminar kit premium, merchandise kantor eksklusif">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Onboarding Kit Karyawan: Investasi Awal untuk Loyalitas Tim">
