--- a/package-gift-set-premium.html
+++ b/package-gift-set-premium.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="gift set agenda pulpen, paket seminar kit mewah, souvenir agenda kulit, metal pen custom logo, souvenir kantor premium surabaya">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Paket Gift Set Premium - Agenda Kulit & Metal Pen">
