--- a/package-hampers-exclusive.html
+++ b/package-hampers-exclusive.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="paket hampers lebaran kantor, hampers natal perusahaan, souvenir akhir tahun, hampers premium surabaya, hardbox custom pita">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Paket Hampers Eksklusif - Corporate Seasonal Gift">
