--- a/packages.html
+++ b/packages.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="paket seminar kit surabaya, onboarding kit karyawan, souvenir kantor paket, corporate gift set eksklusif, hampers kantor custom, paket seminar murah">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Paket Seminar Kit & Corporate Gift Set All-in-One">
