--- a/pulpen-promosi-custom.html
+++ b/pulpen-promosi-custom.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="pulpen promosi custom, cetak pulpen logo, grosir pulpen surabaya, souvenir pulpen seminar, pen metal grafir, pulpen plastik sablon">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Cetak Pulpen Promosi Custom Logo: Solusi Branding Murah & Efektif">
