--- a/rekomendasi-souvenir-kantor-2026.html
+++ b/rekomendasi-souvenir-kantor-2026.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="tren souvenir kantor 2026, rekomendasi corporate gift, ide merchandise perusahaan, souvenir ramah lingkungan, gadget promosi kantor, vendor souvenir surabaya, paket seminar kit terbaru">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Rekomendasi Souvenir Kantor 2026: Tren & Ide Baru">
