--- a/souvenir-akhir-tahun-kalender.html
+++ b/souvenir-akhir-tahun-kalender.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir akhir tahun perusahaan, kalender kantor 2026, buku agenda custom 2026, corporate gift akhir tahun, cetak kalender perusahaan">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Souvenir Akhir Tahun: Pastikan Brand Anda Diingat Sepanjang 2026">
