--- a/souvenir-promosi-doktor-guru-besar.html
+++ b/souvenir-promosi-doktor-guru-besar.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir promosi doktor, hadiah dewan penguji sidang, gift set powerbank pen, tumbler suhu custom nama, souvenir sidang terbuka, paketan souvenir disertasi, merchandise akademik premium">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="7 Ide Souvenir Promosi Doktor yang Berkesan untuk Dewan Penguji">
