--- a/souvenir-ramah-lingkungan.html
+++ b/souvenir-ramah-lingkungan.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir ramah lingkungan, eco friendly souvenir, tumbler bambu custom, buku daur ulang, sustainable corporate gifts, souvenir go green, merchandise esg">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Sustainable Gifts: Tunjukkan Peduli Bumi dengan Souvenir Kantor">
