--- a/souvenir-reuni-alumni.html
+++ b/souvenir-reuni-alumni.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir reuni akbar, merchandise alumni, kaos reuni bordir, polo shirt reuni, payung golf custom, mug kenangan reuni, souvenir temu kangen">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Souvenir Reuni Akbar: Hidupkan Kembali Kenangan Manis Kampus">
