--- a/souvenir-rups-saham.html
+++ b/souvenir-rups-saham.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="souvenir rups saham, merchandise ipo perusahaan, corporate gift premium, souvenir rapat pemegang saham, gift set eksklusif">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Souvenir RUPS Saham: Simbol Stabilitas dan Prestise Perusahaan">
