--- a/speaker-bluetooth-custom-logo.html
+++ b/speaker-bluetooth-custom-logo.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="speaker bluetooth custom, souvenir speaker mini, light up logo souvenir, hadiah kantor unik, speaker promosi perusahaan, vendor souvenir gadget surabaya, merchandise milenial">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Speaker Bluetooth Mini: Souvenir Unik untuk Klien Milenial">
