--- a/tips-memilih-paket-seminar.html
+++ b/tips-memilih-paket-seminar.html
@@ -10,7 +10,7 @@
     <meta name="description"
         content="Panduan lengkap memilih paket seminar kit untuk event kampus dan korporat. Strategi alokasi budget, pemilihan item fungsional, dan tips branding agar souvenir tidak dibuang.">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Tips Memilih Paket Seminar Kit Efektif & Hemat Budget 2026">
