--- a/tumbler-bambu-grafir.html
+++ b/tumbler-bambu-grafir.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="tumbler bambu, bamboo tumbler custom, souvenir eco friendly, tumbler kayu grafir, botol minum bambu, souvenir kantor unik, merchandise go green">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Tumbler Bambu Estetik & Unik: Souvenir Eco-Green Kekinian">
