--- a/vendor-souvenir-kantor-malang.html
+++ b/vendor-souvenir-kantor-malang.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="vendor souvenir malang, souvenir kantor malang, seminar kit malang, merchandise kampus universitas brawijaya, souvenir hotel batu, vendor souvenir unmer">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Vendor Souvenir Kantor Malang: Solusi Merchandise Kreatif Malang Raya">
