--- a/vendor-souvenir-kantor-surabaya.html
+++ b/vendor-souvenir-kantor-surabaya.html
@@ -12,7 +12,7 @@
     <meta name="keywords"
         content="vendor souvenir surabaya, souvenir kantor surabaya, seminar kit surabaya, merchandise perusahaan jatim, gift set surabaya barat, pusat souvenir tunjungan">
     <meta name="author" content="Maroon Souvenir">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Vendor Souvenir Kantor Surabaya: Solusi Merchandise Korporat Jawa Timur">
