--- a/packages.html
+++ b/packages.html
@@ -25,6 +25,61 @@
     <!-- Fonts & Icons -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+    <!-- Schema Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "Paket Seminar Kit & Corporate Gift Set Maroon Souvenir",
+      "description": "Berbagai pilihan paket souvenir kantor, seminar kit, dan onboarding kit karyawan custom logo.",
+      "image": "https://hampersmalang.web.id/assets/hero-packages.png",
+      "brand": {
+        "@type": "Brand",
+        "name": "Maroon Souvenir"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "reviewCount": "1250"
+      },
+      "offers": {
+        "@type": "AggregateOffer",
+        "lowPrice": "35000",
+        "highPrice": "500000",
+        "priceCurrency": "IDR",
+        "offerCount": "7"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [{
+        "@type": "Question",
+        "name": "Berapa minimal order untuk paket bundling?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Minimal order standar adalah 50 paket. Namun untuk paket VIP/Exclusive Hardbox, kami menerima pesanan mulai dari 20 paket dengan penyesuaian harga."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Apakah bisa request isi paket di luar katalog?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Tentu saja! Katalog ini hanya referensi. Anda bisa Mix & Match item apapun yang ada di halaman Produk kami. Silakan konsultasikan budget Anda ke Admin."
+        }
+      }, {
+        "@type": "Question",
+        "name": "Berapa lama pengerjaan gift set custom box?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Estimasi pengerjaan lengkap dengan Box Custom adalah 7-14 hari kerja tergantung antrian dan kerumitan desain. Untuk kebutuhan urgent, silakan cek kategori Express."
+        }
+      }]
+    }
+    </script>
 </head>
 
 <body>
@@ -591,31 +646,7 @@
 
     <script src="script.js"></script>
 
-    <!-- Schema Markup -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Product",
-      "name": "Paket Seminar Kit & Corporate Gift Set Maroon Souvenir",
-      "description": "Berbagai pilihan paket souvenir kantor, seminar kit, dan onboarding kit karyawan custom logo.",
-      "image": "https://hampersmalang.web.id/assets/hero-packages.png",
-      "brand": {
-        "@type": "Brand",
-        "name": "Maroon Souvenir"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.9",
-        "reviewCount": "1250"
-      },
-      "offers": {
-        "@type": "AggregateOffer",
-        "lowPrice": "35000",
-        "highPrice": "500000",
-        "priceCurrency": "IDR"
-      }
-    }
-    </script>
+
 </body>
 
 </html>
